# fuxi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
fuxi/: Cargo.toml  build.rs  pyproject.toml
fuxi-macros/: Cargo.toml  build.rs
fuxi-macros/src/: define_coins_with_codes.rs  define_map.rs  lib.rs  model_enum.rs  model_options.rs  model_struct.rs
fuxi/python/fuxi/: __init__.py  indicator.py  strategy.py
fuxi/python/fuxi/_core/: __init__.pyi  backtest.pyi  base.pyi  code.pyi  context.pyi  market.pyi  order.pyi  position.pyi
fuxi/python/fuxi/_sdk/: __init__.pyi  alias.pyi  backtest.pyi  base.pyi  code.pyi  config.pyi  constants.pyi  context.pyi  func.pyi  fuxi.pyi  market.pyi  order.pyi  position.pyi  symbol.pyi
fuxi/python/fuxi_core/: order.pyi
fuxi/src/: backtest.rs  context.rs  data_provider.rs  history_data.rs  lib.rs  runtime.rs  sandbox.rs  strategy.rs
fuxi/src/engine/: backtest.rs  config.rs  context.rs  func.rs  mod.rs  strategy.rs  traits.rs
fuxi/src/helpers/: constants.rs  id.rs  log.rs  mod.rs  time.rs
fuxi/src/types/: alias.rs  base.rs  market.rs  mod.rs  order.rs  position.rs  symbol.rs
