[workspace]
members = ["fuxi-macros", "fuxi"]
resolver = "2"


[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["<Husky> <husky.robot.dog@gmail.com>"]
license = "MIT"


[profile.release]
codegen-units = 1
lto = "fat"
debug = "line-tables-only"


[workspace.dependencies]
fuxi-macros = { path = "fuxi-macros" }
tokio = { version = "1.47", features = ["full"] }
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
fast_log = { version = "1.7" }
log = { version = "0.4" }
rayon = { version = "1.11" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
    "stream",
    "json",
] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
strum = { version = "0.27", features = ["derive"] }
rust_decimal = { version = "1.38", features = ["macros"] }
simd-json = { version = "0.16" }
uuid = { version = "1.18", features = ["v7"] }
thiserror = { version = "2.0" }
base64 = { version = "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
hex = { version = "0.4" }
parking_lot = { version = "0.12" }
indexmap = { version = "2.11" }
pastey = { version = "0.1" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
prettyplease = { version = "0.2" }
fastdate = { version = "0.3" }
tinytemplate = { version = "1.2" }
chrono-tz = { version = "0.10" }
pyo3 = { version = "0.26", features = ["full", "multiple-pymethods"] }
humantime = { version = "2.3" }
num-format = { version = "0.4" }
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.34.0-beta.5", package = "polars", features = [
    "nightly",
    "simd",
    "avx512",
    "ipc",
    "ipc_streaming",
    "lazy",
    "timezones",
    "dtype-full",
] }
arrow = { git = "https://github.com/apache/arrow-rs.git", branch = "main", package = "arrow", default-features = false, features = [
    "pyarrow",
] }
