[package]
name = "fuxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[lib]
name = "fuxi"
crate-type = ["cdylib"]


[dependencies]
fuxi-macros = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
fast_log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
fastdate = { workspace = true }
chrono-tz = { workspace = true }
pyo3 = { workspace = true }
humantime = { workspace = true }
num-format = { workspace = true }
polars = { workspace = true }
pyo3-polars = { workspace = true }
reqwest = { workspace = true }


[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tinytemplate = { workspace = true }
