[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"


[project]
name = "fuxi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "license"]
dependencies = ["polars[all]==1.34.0b5", "TA-Lib==0.6.7", "numpy==2.3.3"]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fuxi._core"
